blog/src/parts/wrapper.css
body {
  background: repeat-x url(../img/pierre3.png) 50% 0%;
  width: 100%;
}

#navbar-iframe-container {
  display: none !important;
}

#menu_tabLabs {
  display: none;
}

#header-wrapper,
#content-wrapper,
#footer-wrapper {
  width: 700px;
  padding: 0px 1.5rem;
  margin: 0 auto;
  background: #fff;
  background: rgba(255, 255, 255, 0.8);
}

